--- a/data/posts/blog-one/index.mdx
+++ b/data/posts/blog-one/index.mdx
@@ -1,6 +1,13 @@
 ---
-title: My First Post
-date: 2021-12-24
+title: "A title for test"
+description: "Some description to test in development"
+author: "TiagoAraujoDev"
+publishedAt: 2021-12-24
+tags:
+  - development
+  - React
+  - Contentlayer
+imageUrl: "/images/test.png"
 ---
 # Post title
 
