style: some responsiveness

--- a/data/posts/blog-one/index.mdx
+++ b/data/posts/blog-one/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "A title for test"
-description: "Some description to test in development"
+description: "Ipsam corporis libero aut dolor a qui. Aut facilis natus saepe voluptatem. Dolores neque rerum nihil voluptas dolore alias. Aliquam maiores quibusdam culpa eum ut esse."
 author: "TiagoAraujoDev"
 publishedAt: 2021-12-24
 tags:
