--- a/data/posts/blog-two/index.mdx
+++ b/data/posts/blog-two/index.mdx
@@ -1,13 +1,13 @@
 ---
-title: "A title for test"
+title: "A bigger title to test responsiveness!"
 description: "Some description to test in development"
 author: "TiagoAraujoDev"
-publishedAt: 2021-12-24
+publishedAt: 2023-11-14
 tags:
   - development
   - React
   - Contentlayer
-imageUrl: "/images/test.png"
+imageUrl: "/images/code_test.png"
 ---
 # Post title
 
