feat: post aside panel with some info

--- a/data/blog/blog-five/index.mdx
+++ b/data/blog/blog-five/index.mdx
@@ -1,12 +1,10 @@
 ---
-title: "A title for test"
-description: "Ipsam corporis libero aut dolor a qui. Aut facilis natus saepe voluptatem. Dolores neque rerum nihil voluptas dolore alias. Aliquam maiores quibusdam culpa eum ut esse."
+title: "Blog number 5"
+description: "Some description to test in development"
 author: "TiagoAraujoDev"
-publishedAt: 2021-12-24
+publishedAt: 2022-08-24
 tags:
   - development
-  - React
-  - Contentlayer
 imageUrl: "/images/test.png"
 ---
 # Post title
