--- a/data/blog/blog-four/index.mdx
+++ b/data/blog/blog-four/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: "A title for test"
-description: "Some description to test in development"
+title: "I'm running out of ideas."
+description: "some random description 'cause there ain't more ideas.kkk"
 author: "TiagoAraujoDev"
-publishedAt: 2021-12-24
+publishedAt: 2022-04-22
 tags:
-  - development
-  - React
+  - UUID
+  - something
   - Contentlayer
 imageUrl: "/images/test.png"
 ---
