--- a/data/blog/blog-three/index.mdx
+++ b/data/blog/blog-three/index.mdx
@@ -1,13 +1,12 @@
 ---
-title: "A title for test"
-description: "Some description to test in development"
+title: "Building a blog using Nextjs and MDX"
+description: "Let's learn how to build a nextjs application using tailwindcss, contentlayer and some other fun stuffs."
 author: "TiagoAraujoDev"
-publishedAt: 2021-12-24
+publishedAt: 2023-11-10
 tags:
-  - development
-  - React
+  - Nextjs
   - Contentlayer
-imageUrl: "/images/test.png"
+imageUrl: "/images/code_test.png"
 ---
 # Post title
 
