--- a/data/blog/welcome-to-my-blog/index.mdx
+++ b/data/blog/welcome-to-my-blog/index.mdx
@@ -10,18 +10,20 @@ imageUrl: "/images/welcome_to_my_blog/thumbnail.png"
 ---
 # Welcome to my first blog post!
 
-Hello, my name is Tiago, and I'm IT student that is hungry
-for learning about web development, cybersecurity or anything new and exciting on technology. In this Blog I
-want to talk about the things that I learned and things that I enjoy doing in my free time like, building *unnecessary/cool* stuff and contributing to open source.
+Hello, my name is Tiago, and I'm IT student that is hungry for learning about
+web development, cybersecurity or anything new and exciting on technology. In
+this Blog I want to talk about the things that I learned and things that I enjoy
+doing in my free time like, building *unnecessary/cool* stuff and contributing
+to open source.
 
 ## Tools
 
 ![Linux](/images/welcome_to_my_blog/linux.png)
 
-One day decided to install a linux distribution on my notebook,
-I was tired of using **Windows** and all that crap about using a system that you 
-need to buy, to be honest that time I didn't know anything about all telemetry
-that **Microsoft** gave me with no choice. So I took a decision, let's install a 
+One day decided to install a linux distribution on my notebook, I was tired of
+using **Windows** and all that crap about using a system that you need to buy,
+to be honest that time I didn't know anything about all telemetry that
+**Microsoft** gave me with no choice. So I took a decision, let's install a
 Linux distribution but, which one? I ask my brother, and he said to me that an
 easy way in could be **Ubuntu**, a friendly distribution. 
 
@@ -45,3 +47,13 @@ What I used:
 
 ![Web development](/images/welcome_to_my_blog/web_development.jpg)
 
+When I started studding programming, the first language that I spent real time
+learning was **Javascript** and I decided to specialize in web development, and
+throughout this process I learned about some front-end tools like React, Angular
+and Astro. On the server side I build some application with Expressjs and
+Fastify.
+
+I'm currently learning Java with Springboot and in the future I pretend to learn
+Go.
+
+_I'll also talk about what I'm learning and some specific web stuff_
