blog: writing a post

--- a/data/blog/welcome-to-my-blog/index.mdx
+++ b/data/blog/welcome-to-my-blog/index.mdx
@@ -57,3 +57,23 @@ I'm currently learning Java with Springboot and in the future I pretend to learn
 Go.
 
 _I'll also talk about what I'm learning and some specific web stuff_
+
+## Open source
+
+After entering the Linux world and beging to use the terminal a little more everyday
+I discovered the open source community. It's really amazing what a community of developers
+can do. Neovim, Archlinux, Zellij, Lazygit, Zap and a lot of others projects made me love even more
+software development. Open source is true love to build cool stuff that you really care about, ain't 
+this beautiful? So I decided to make part of this, of course, I contributed to Lunarvim and Astronvim,
+both Neovim distributions and I build a plugin to Zap a Zsh plugin manager.
+
+> You can check out this on my [GitHub profile](https://github.com/TiagoAraujoDev)!
+
+## Off topic
+
+Beside programming and technology I love to play videogames and play/listen to music, so I'll write 
+about this too.
+
+So that's it for now! If you like my blog please follow me on my social medias
+
+> _Keep striving for progress, not perfection. And always remember a little progress everyday goes a long way!_
